tests/derive_errors/enum/tuple_variants.stderr
error: Typedef can't support tuple variants
 --> tests/derive_errors/enum/tuple_variants.rs:3:5
  |
3 |     Foo(u32),
  |     ^^^^^^^^

error: Typedef can't support tuple variants
  --> tests/derive_errors/enum/tuple_variants.rs:10:5
   |
10 |     Bar(u32),
   |     ^^^^^^^^
